# nbody-simulator

./: .gitignore  .prettierignore  Cargo.toml  README.md  STATE.md  package-lock.json  package.json  settings.json
.github/workflows/: build.yml
.planning/: 1-CONTEXT.md  2-CONTEXT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/1-core-performance/: 1-PLAN.md  1-RESEARCH.md
.planning/phases/2-enhanced-visualization/: 2-PLAN.md  2-RESEARCH.md
nbody_simulator/: .gitignore  Cargo.toml
nbody_simulator/src/: lib.rs  particle.rs  quad_node.rs  quad_tree.rs  rectangle.rs  vector2.rs
nbody_simulator/src/utils/: calculation_utils.rs  quadrant_utils.rs
script/src/: main.rs
web/: .eslintrc.cjs  .gitignore  eslint.config.js  index.html  package-lock.json  package.json
web/src/: default.js  form-state.js  index.html  script.js  tailwind.css
