[package]
name = "nbody_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }

[dev-dependencies]
approx = "0.5.1"
